<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="a.b.TEA.KartkowkaFragment">

    <TextView
        android:id="@+id/slowkoTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="8dp"
        android:text="@string/przykladowe_slowko"
        android:textAlignment="center"
        android:textColor="?attr/primaryTextColor"
        android:textSize="55sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tlumaczenieET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/podaj_tlumaczenie"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="?attr/primaryTextColor"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bn_sprawdz"
        android:layout_width="207dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="292dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/buttonshape"
        android:text="@string/zatwierdz"
        android:textColor="?attr/primaryTextColor"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dobrychNapis"
        android:layout_width="205dp"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp"
        android:text="@string/dobrych_odpowiedzi"
        android:textAlignment="center"
        android:textColor="?attr/primaryTextColor"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/slowkoTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.159" />

    <TextView
        android:id="@+id/zlychNapis"
        android:layout_width="206dp"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp"
        android:text="@string/zlych_odpowiedzi"
        android:textAlignment="center"
        android:textColor="?attr/primaryTextColor"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/slowkoTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.159" />

    <TextView
        android:id="@+id/zlychTV"
        android:layout_width="206dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:textColor="@color/kartkowkaRed"
        android:text="@string/_11"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/slowkoTV"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/dobrychTV"
        android:layout_width="205dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:text="@string/_34"
        android:textColor="@color/kartkowkaGreen"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/slowkoTV"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/odw"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="428dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/buttonshapepusty"
        android:text="@string/zmie_j_zyki"
        android:textColor="?attr/primaryTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <com.google.android.gms.ads.AdView-->
<!--        android:id="@+id/adViewKartkowka"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_marginTop="20dp"-->
<!--        app:adSize="BANNER"-->
<!--        app:adUnitId="@string/banner_ad_unit_id"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/odw">-->
<!--    </com.google.android.gms.ads.AdView>-->

</androidx.constraintlayout.widget.ConstraintLayout>