<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="a.b.TEA.HomeFragment">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="500dp"
        android:layout_height="220dp"
        android:contentDescription="@string/tea_test_exam_answer"
        android:src="@drawable/logobc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="220dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/add"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/buttonshape"
                android:text="@string/dodaj_s_wka"
                android:textColor="?attr/primaryTextColor"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/bn_view_users"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/buttonshape"
                android:text="@string/przejrzyj_s_wka"
                android:textColor="?attr/primaryTextColor"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add" />

            <Button
                android:id="@+id/fiszkiBtn"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/buttonshape"
                android:text="Szybkie fiszki"
                android:textColor="?attr/primaryTextColor"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bn_view_users" />

            <Button
                android:id="@+id/fiszkiZolodkiBtn"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/buttonshape"
                android:text="Zaawansowane fiszki"
                android:textColor="?attr/primaryTextColor"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fiszkiBtn" />

            <Button
                android:id="@+id/bn_kartkowka"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/buttonshape"
                android:text="@string/kartk_wka"
                android:textColor="?attr/primaryTextColor"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fiszkiZolodkiBtn" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <!--        <com.google.android.gms.ads.AdView-->
<!--            android:id="@+id/adViewHome"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_alignParentBottom="true"-->
<!--            android:layout_centerHorizontal="true"-->
<!--            android:layout_marginTop="20dp"-->
<!--            app:adSize="BANNER"-->
<!--            app:adUnitId="@string/banner_ad_unit_id"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/bn_kartkowka">-->
<!--        </com.google.android.gms.ads.AdView>-->

</androidx.constraintlayout.widget.ConstraintLayout>
