<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="a.b.TEA.ZolodekNumerFragment">

    <TextView
        android:id="@+id/kartaTV3Z"
        android:layout_width="324dp"
        android:layout_height="350dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/fiszkishape"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/przykladowe_slowko"
        android:textColor="?attr/primaryTextColor"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/kartaTV2Z"
        android:layout_width="324dp"
        android:layout_height="350dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/fiszkishape"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/przykladowe_slowko"
        android:textColor="?attr/primaryTextColor"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/kartaTVZ"
        android:layout_width="324dp"
        android:layout_height="350dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/fiszkishape"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/przykladowe_slowko"
        android:textColor="?attr/primaryTextColor"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/nieUmiemBtnZ"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/buttonshapepusty"
        android:text="@string/nie_umiem"
        android:textColor="?attr/primaryTextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kartaTVZ" />

    <Button
        android:id="@+id/umiemBtnZ"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/buttonshapepusty"
        android:text="@string/umiem"
        android:textColor="?attr/primaryTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kartaTVZ" />

    <!--    <com.google.android.gms.ads.AdView-->
    <!--        android:id="@+id/adViewFiszki"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_alignParentBottom="true"-->
    <!--        android:layout_centerHorizontal="true"-->
    <!--        app:adSize="BANNER"-->
    <!--        app:adUnitId="@string/banner_ad_unit_id"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.494"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent">-->
    <!--    </com.google.android.gms.ads.AdView>-->

</androidx.constraintlayout.widget.ConstraintLayout>